fix: align pano items

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -11,7 +11,7 @@
 }
 
 .pano-window .search-entry-container {
-  padding: 10px;
+  padding: 14px;
   padding-bottom: 5px;
 }
 
@@ -22,20 +22,20 @@
 
 .pano-item {
   border-radius: 11px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  margin-left: 6px;
+  margin-right: 6px;
   height: 300px;
   width: 300px;
   border: 4px solid transparent;
 }
 
 .pano-item:visible:first-child {
-  margin-left: 20px;
+  margin-left: 14px;
 }
 .pano-item:visible:last-child {
-  margin-right: 20px;
+  margin-right: 14px;
 }
 
 .pano-item:selected {
